# 4sl07

./: .gitignore  COMMON_PATH  Cargo.toml  deploy.sh  slr07  start-kafka-deploy.sh  test.sh
kafka-stream/scripts/: start-client.sh  start-server.sh
scripts/: client.py  deploy.py  log_commands.py  machines.py
src/: lib.rs  main.rs  map.rs
src/management_protocole/: client.rs  main_protocole.rs  mod.rs  server.rs
src/management_protocole/file_transfer_protocole/: file_client.rs  file_server.rs
src/management_protocole/main_protocole/: downloader.rs  main_client.rs  main_server.rs  mod.rs
src/mapper/: map.rs  mod.rs  saver.rs  testing.rs
src/tasks/: map.rs  mapreduce.rs  mod.rs  reduce.rs  saver.rs  testing.rs
src/tasks/map/: default.rs  defaultwithasiansplit.rs  defaultwithlanguagesplit.rs  languagecount.rs  languagesize.rs  mod.rs  reverseweblink.rs  sitepagecount.rs  sitesize.rs
src/tasks/reduce/: default.rs  defaultwithasiansplit.rs  languagecount.rs  languagesize.rs  mod.rs  reverseweblink.rs  sitepagecount.rs  sitesize.rs
src/tasks/versions/: cocitation.rs  inoutlinks.rs  mod.rs  reverseweblink.rs
