[package]
name = "slr07"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
bytes = "1.11.1"
futures = "0.3.32"
rustc-hash = "2.1.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
